ferric/tests/ui/semantic_err_03.stderr
error: undefined query variable `grass_wet2`
  --> tests/ui/semantic_err_03.rs:28:11
   |
28 |     query grass_wet2;
   |           ^^^^^^^^^^
